Fix alignment bug on FAQs

--- a/apps/qrgopass-qwik/src/routes/information/information.css
+++ b/apps/qrgopass-qwik/src/routes/information/information.css
@@ -27,7 +27,7 @@ article h2 {
     min-width: 300px;
     max-width: calc((4 * 16em));
     justify-content: center;
-    margin: 0 3em;
+    margin: auto;
 }
 
 .blue-button {
